force-app/main/default/objects/Job_request__c/Job_request__c.object-meta.xml
<CustomObject>
    <label>Job request</label>
    <nameField>
        <displayFormat>JR-{000000}</displayFormat>
        <label>Job request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>