force-app/main/default/objects/Job_request__c/fields/Job_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Job_Parameters__c</fullName>
    <description>JSON parameters</description>
    <label>Job Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>