force-app/main/default/objects/Job_request__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
            <value>
                <fullName>Finished with an error</fullName>
            </value>
            <value>
                <fullName>Failed to run</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>