force-app/main/default/objects/Job_request__c/fields/Status_Info__c.field-meta.xml
<CustomField>
    <fullName>Status_Info__c</fullName>
    <label>Status Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>