force-app/main/default/objects/Job_request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Type__c</columns>
    <columns>Job_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>